# greenhouse

./: .env.example  .gitignore  .oxlintrc.json  .prettierrc  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  components.json  docker-compose.example.yml  docker-compose.yml  eslint.config.ts  mypy.ini  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: code-quality-and-tests.yml  publish-images.yml
app/: manage.py
app/core/: asgi.py  settings.py  urls.py  wsgi.py
app/greenhouse/: admin.py  asgi.py  exceptions.py  pagination.py  schemas.py  settings.py  urls.py  views.py  wsgi.py
app/greenhouse/commons/: pagination.py
app/greenhouse/migrations/: 0001_initial.py  0008_remove_crop_max_days_to_harverst_and_more.py  0009_alter_crop_name_alter_crop_scientific_name.py  0010_alter_crop_created_at.py  0011_alter_crop_max_days_to_harvest_and_more.py  0012_alter_crop_options.py  0014_plantinglocation_length_and_more.py  0015_plantinglocation_image.py  0016_crop_image.py  0017_crop_user.py  0018_alter_crop_image_alter_crop_user.py
app/greenhouse/models/: __init__.py  crop.py  planting.py  planting_daily_observation.py  planting_growth_stage.py  planting_location.py  planting_location_assignment.py  variety.py
app/greenhouse/openapi/: examples.py  parameters.py  responses.py  schemas.py
app/greenhouse/serializers/: __init__.py  auth.py  crop.py  crops.py  planting_location.py  utils.py
app/greenhouse/tests/: __init__.py  auth.py  crops.py
app/greenhouse/urls/: auth.py  crops.py  planting_location.py
app/greenhouse/utils/: api.py  renderers.py
app/greenhouse/views/: __init__.py  auth.py  crops.py  planting_location.py
backend/core/: settings.py  urls.py
backend/greenhouse/: apps.py  exceptions.py  pagination.py
dockerfiles/: Dockerfile.app  Dockerfile.backend  Dockerfile.frontend
frontend/: index.html
frontend/public/: config.js
frontend/src/: main.ts
helm/greenhouse/: Chart.yaml  values.example.yaml
(+381 files in other folders)
