[project]
name = "greenhouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-filter>=25.2",
    "django>=6.0.1",
    "djangorestframework>=3.16.1",
    "markdown>=3.10",
    "python-decouple>=3.8",
    "dj-database-url>=3.1.0",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "ruff>=0.14.11",
]
